manifests/others/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-apps-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-http-version: "1.1"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/proxy-set-headers: |
      Upgrade $http_upgrade;
      Connection "upgrade";

spec:
  ingressClassName: nginx
  rules:
  - host: student-app.shubhamxshah.xyz
    http:
      paths:
      - path: /prom/(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: kps-kube-prometheus-stack-prometheus
            namespace: monitoring
            port:
              number: 9090
      - path: /grafana/(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: kps-grafana
            namespace: monitoring
            port:
              number: 80
      - path: /student-app/(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: student-service
            namespace: student-api
            port:
              number: 3002
